--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ hr {
 	padding: 100px 0;
 	text-align: center;
 	color: #fff;
-	background: url(../img/intro-bg.jpg) no-repeat center top;
+	background: url(../img/intro-bg.gif) no-repeat center center;
 	background-color: #7bc3d1;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -329,7 +329,7 @@ ol.type li a:hover {
 	transform: scale(1.1);
 }
 .portfolio-item .hover-bg {
-	height: 260px;
+	height: 200px;
 	overflow: hidden;
 	position: relative;
 }
@@ -339,7 +339,7 @@ ol.type li a:hover {
 	margin: 0 auto;
 	color: #ffffff;
 	background: rgba(0, 0, 0, 0.66);
-	padding: 33% 0 0 0;
+	padding: 20% 0 0 0;
 	height: 100%;
 	width: 100%;
 	opacity: 0;
@@ -496,6 +496,7 @@ ol.type li a:hover {
 	margin-top: 0;
 	text-transform: uppercase;
 	font-size: 16px;
+	line-height: 1.3;
 }
 .timeline .timeline-heading h2 {
 	margin-top: 30px;
@@ -632,6 +633,14 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	color: #7bc3d1;
 }
 
+/*MY Custom css*/
+div.pp_default .pp_description{
+	color: #333;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 1.2;
+}
+
 /* Media Queries */
 @media(min-width:768px) {
 .intro {
@@ -725,7 +734,7 @@ header .intro-text {
 	min-height: 170px;
 }
 .timeline>li .timeline-panel {
-	padding: 10px 20px 20px 100px;
+	padding: 30px 20px 20px 100px;
 }
 .timeline>li .timeline-image {
 	width: 150px;
@@ -737,6 +746,6 @@ header .intro-text {
 	font-weight: 400;
 }
 .timeline>li.timeline-inverted>.timeline-panel {
-	padding: 10px 100px 20px 20px;
+	padding: 30px 100px 20px 20px;
 }
 }
