--- a/css/style.css
+++ b/css/style.css
@@ -749,3 +749,17 @@ header .intro-text {
 	padding: 30px 100px 20px 20px;
 }
 }
+
+/* generic classes */
+.float-left{
+	float: left !important;
+}
+.float-right{
+	float: right !important;
+}
+.text-left{
+	text-align: left !important;
+}
+.text-right{
+	text-align: right !important;
+}
